<resources>
    <string name="app_name">ACT Fibernet Wi-Fi Analyser</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="band">Band</string>
    <string name="channel">Channel Width</string>
    <string name="mac_address">Mac Address</string>
    <string name="aa">aa</string>
    <string name="nearbywifi">Neighbouring Wi-Fi Networks</string>
    <string name="gateway">Gateway: </string>
    <string name="ipaddress">Ip Address: </string>
    <string name="netmask">Net Mask: </string>
    <string name="connected_wifi">Your connected Wi-Fi </string>
    <string name="please_connect_wifi">Please connect to Wi-Fi to check the results!!</string>
    <string name="wifi_on">Turning Wi-Fi ON…</string>
    <string name="scanning">scanning</string>
    <string name="permission_granted">"permission granted"</string>
    <string name="permission_not_granted">permission not granted</string>
    <string name="loading">Loading…</string>
    <string name="nw_size"> nw1 size  : </string>
    <string name="firmversion">FirmwareVersion :  </string>
    <string name="online">Online : </string>
    <string name="nw_name">nw1 name : </string>
    <string name="no_of_device">No of devices : </string>
    <string name="permissions">App Permissions </string>
    <string name="neighbour_wifi">Neighbouring Wi-Fi Networks </string>
    <string name="connected_wifi_title">Connected Wi-Fi </string>
    <string name="user_info">User Info</string>
    <string name="device_status">Device Status </string>
    <string name="device_info">Device Info </string>
    <string name="get_ssid">Get SSID </string>
    <string name="connected_devices">Connected Devices</string>
    <string name="sdk_test_methods">Test SDK Methods</string>
    <string name="login">Enter Login Name</string>
    <string name="test">Test</string>
    <string name="value">Value</string>
    <string name="ssid">Please Enter the SSID</string>

    <string-array name="main_sdk_list">
        <item>Neighbour Wi-Fi</item>
        <item>Connected Wfi</item>
        <item>User Info</item>
        <item>Device Status</item>
        <item>Device Info</item>
        <item>Get SSID</item>
    </string-array>
    <string name="wifi_settings">Wi-Fi Settings</string>
    <string name="invalid_login">Invalid login. Please check.</string>
    <string name="home">Home</string>
    <string name="channel_num">Channel Number</string>
    <string name="link_speed">Link Speed</string>
    <string name="signal_strength">Signal Strength</string>
    <string name="signal_level">Signal Level</string>
    <string name="ok">OK</string>
    <string name="update_details">Update Details</string>
    <string name="oops">Oops. Timeout!s</string>
    <string name="scan_again">Scan again</string>
    <string name="poor">Poor</string>
    <string name="fair">Fair</string>
    <string name="good">Good</string>
    <string name="excellent">Excellent</string>
    <string name="enter_ssid">Enter SSID</string>
    <string name="update">Update</string>
    <string name="request">REQUEST:</string>
    <string name="response">RESPONSE:</string>
    <string name="interfering_router_s">Interfering Router(s)</string>
    <string name="channel_title">Channel</string>
    <string name="signal">Signal</string>
    <string name="device_s_connected">Device(s) Connected</string>
    <string name="optimize">Optimize</string>
    <string name="diagnostics">Diagnostics</string>
    <string name="optimize_my_wi_fi">Optimize My Wi-Fi</string>
    <string name="best_wi_fi_spot_finder">Best Wi-Fi spot finder</string>
    <string name="connected_device">Connected Device:</string>
    <string name="your_current_wi_fi">Your current Wi-Fi</string>
    <string name="your_router_is_congested_tap_on_optimize_to_move_an_optimal_channel">Your router is congested tap on Optimize to move an optimal channel</string>
    <string name="you_are_on_best_possible_channel_n_select_optimize_your_wi_fi">You are on best possible channel. \n Select optimize your Wi-Fi.</string>

    <string-array name="paramType">
        <item>SSID_2</item>
        <item>SSID_5</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wi_fi_analyzer">Wi-Fi Analyzer</string>

</resources>