<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
      >

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_one_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20dp"
        android:elevation="10sp"
        app:cardBackgroundColor="@color/login_gray"
        app:cardCornerRadius="10sp"
        app:cardElevation="10sp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent"
            >
        <TextView
            android:id="@+id/connected"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/your_current_wi_fi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>
        <TextView
            android:id="@+id/congestd_text"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/your_router_is_congested_tap_on_optimize_to_move_an_optimal_channel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>

        <Button
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginBottom="@dimen/_20dp"
            android:id="@+id/optimize"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/scan_border"
            android:drawableStart="@drawable/optimizeb"
            android:drawableLeft="@drawable/optimizeb"
            android:paddingLeft="@dimen/_10dp"
            android:text="@string/optimize"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold">

        </Button>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="wrap_content"
            android:text="Interfering router"
            android:layout_gravity="left"
            android:layout_marginLeft="30dp"
            android:layout_height="wrap_content">


        </TextView>
        <LinearLayout
            android:id="@+id/rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20dp"
            android:orientation="vertical">


        </LinearLayout>

    </LinearLayout>
   <!-- <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:text="Interfering router"
            android:layout_gravity="center"
            android:layout_height="wrap_content">


        </TextView>
    </LinearLayout>-->



</LinearLayout>
</ScrollView>